update: add a virtual environment and a simple refactor in script.py

--- a/app/script.ipynb
+++ b/app/script.ipynb
@@ -17,8 +17,8 @@
    "source": [
     "df = pd.read_csv(\"ContosoCustomer.csv\", sep=\";\", decimal=\",\")\n",
     "\n",
-    "# display(df)\n",
-    "# df.info()"
+    "display(df)\n",
+    "df.info()"
    ]
   },
   {
@@ -32,8 +32,7 @@
     "\n",
     "df = df.drop(columns=useless_columns)\n",
     "\n",
-    "# # display(df)\n",
-    "# # df.info()"
+    "df.info()"
    ]
   },
   {
@@ -44,13 +43,14 @@
    "source": [
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
-    "coder = LabelEncoder()\n",
+    "ENCODER = LabelEncoder()\n",
     "\n",
-    "df[\"Education\"] = coder.fit_transform(df[\"Education\"])\n",
-    "df[\"Occupation\"] = coder.fit_transform(df[\"Occupation\"])\n",
+    "columns_to_int = [\"Education\", \"Occupation\"]\n",
     "\n",
-    "# display(df)\n",
-    "# df.info()"
+    "for column in columns_to_int:\n",
+    "    df[column] = ENCODER.fit_transform(df[column])\n",
+    "\n",
+    "df.info()"
    ]
   },
   {
@@ -111,8 +111,8 @@
     "\n",
     "new_customers = new_customers.drop(columns=useless_columns)\n",
     "\n",
-    "# display(df_new_customers)\n",
-    "# df_new_customers.info()"
+    "display(new_customers)\n",
+    "new_customers.info()"
    ]
   },
   {
@@ -121,8 +121,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_customers[\"Education\"] = coder.fit_transform(new_customers[\"Education\"])\n",
-    "new_customers[\"Occupation\"] = coder.fit_transform(new_customers[\"Occupation\"])"
+    "for column in columns_to_int:\n",
+    "    new_customers[column] = ENCODER.fit_transform(new_customers[column])"
    ]
   },
   {
